--- a/views/booking_activity_occupation.erb
+++ b/views/booking_activity_occupation.erb
@@ -5,7 +5,7 @@
 .table .table-cell {
   border-right: 1px solid #EEE;
   width: 1.5em;
-  font-size: 0.7em;
+  font-size: 0.65em;
 }
 .occupation-detail {
   cursor: hand; cursor: pointer;
@@ -52,7 +52,7 @@
                   <div <%if quantity >0%>class="more_contrast_text"<%end%>><%=activity_detail[:price_literals][item_price_type][0]%>:<%="%.f" %quantity%></div>
                 <% end %>
                  <% percentage = total.to_f / real_capacity.to_f * 100%>
-                  <div class="more_contrast_text <%if percentage > 0 %>occupation-detail<%end%>" style="top-margin:0.5em;bottom-margin:0.5em; border-top:1px solid #CCC;  <% if percentage >= 100 %>background:red; color: white<%elsif percentage >= 75 and !percentage.infinite?%>background:orange<%elsif percentage > 0 and !percentage.infinite?%>background:yellow<%end%><% if real_capacity.to_f == 0%>background:#DDD<%end%>" <%if percentage > 0%>data-url="/admin/booking/activity-detail?date=<%=Date.new(@year,@month,day).strftime('%Y-%m-%d')%>&time=<%=timetable%>&item_id=<%=activity_id%>&layout=no"<%end%> title="<%="%.f" %total%>/<%="%.f" %real_capacity%>"><%if real_capacity.to_f == 0%>NO<%else%> <%="%.f" %total%>/<%="%.f" %real_capacity%><%end%></div>
+                  <div class="more_contrast_text <%if percentage > 0 %>occupation-detail<%end%>" style="top-margin:0.5em;bottom-margin:0.5em; border-top:1px solid #CCC;  <% if percentage >= 100 %>background:red; color: white;<%elsif percentage >= 75 and !percentage.infinite?%>background:orange;<%elsif percentage > 0 and !percentage.infinite?%>background:yellow;<%end%><% if total.to_f == 0 and real_capacity.to_f == 0%>background:#DDD<%end%>" <%if percentage > 0%>data-url="/admin/booking/activity-detail?date=<%=Date.new(@year,@month,day).strftime('%Y-%m-%d')%>&time=<%=timetable%>&item_id=<%=activity_id%>&layout=no"<%end%> title="<%="%.f" %total%>/<%="%.f" %real_capacity%>"><%if total.to_f == 0 and real_capacity.to_f == 0%>NO<%else%> <%="%.f" %total%>/<%="%.f" %real_capacity%><%end%></div>
                   <div><span class="ui-icon ui-icon-pencil edit-icon" data-date="<%=Date.new(@year,@month,day).strftime('%Y-%m-%d')%>" data-time="<%=timetable%>" data-activity-code="<%=activity_id%>" style="cursor: hand; cursor: pointer"></span></div>             
               </td>
             <% else %>
