--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -302,6 +302,11 @@
               </div>                                          
             </form>
           </div>
+          <div class="grid_6">
+            <div class="left-margin smaller_text">
+              <%= t.booking_category_management.form.new_product_detail%>
+            </div>
+          </div>
           </div>
         </div>
 
