--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -73,6 +73,7 @@
       </ul>    
    </li>     
    <li class='<%if ['/admin/booking/reports/reservations',
+     '/admin/booking/reports/resource-reservations',
      '/admin/booking/reports/customer-reservations',
      '/admin/booking/reports/prereservations',
      '/admin/booking/activities-summary',
@@ -82,6 +83,7 @@
         <li><a href='/admin/booking/reports/stock'><%=t.booking_console.report_stock%></a></li>
         <li><a href='/admin/booking/reports/prereservations'><%=t.booking_console.report_prereservations%></a></li>    
         <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
+        <li><a href='/admin/booking/reports/resource-reservations'><%=t.booking_console.report_resource_reservations%></a></li>        
         <li><a href='/admin/booking/reports/customer-reservations'><%=t.booking_console.report_customer_reservations%></a></li>        
         <li><a href='/admin/booking/activities-summary'><%=t.booking_console.activities_report%></a></li>           
         <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>   
