--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -9,20 +9,40 @@
 <script type="text/tmpl" id="elements_description">
 </script>
 
+<!-- Renders the search -->
+<script type="text/tmpl" id="elements_search">
+  <form name="contents_search" id="contents_search" style="overflow:visible">
+     <div class="form-row">
+       <input type="text" name="search" class="search-entity-input"
+              maxlength="60" size="20" placeholder="<%=t.entitymanagement.search%>"/>
+       <select name="active" class="search-entity-control">
+         <option value="only"><%=t.booking_item_management.form.active_filter.only%></option>
+         <option value="all"><%=t.booking_item_management.form.active_filter.all%></option>
+       </select>
+     </div>
+  </form>
+</script>
+
 <!-- Renders the elements container -->
 <script type="text/tmpl" id="elements_container_template">
   <table id="elements_table" class="table">
      <thead class="table-header">
        <tr>
-         <th class="table-header-title centered_text" scope="col" style="width:15%">
-            <%= t.booking_item_management.form.reference.label %>
-         </th>
-         <th class="table-header-title centered_text" scope="col" style="width:10%">
+         <th class="table-header-title" scope="col" style="width:10%">
             <%= t.booking_item_management.form.category.label %>
          </th>
-         <th class="table-header-title" scope="col" style="width:35%">
+         <th class="table-header-title" scope="col" style="width:15%">
+            <%= t.booking_item_management.form.reference.label %>
+         </th>
+         <th class="table-header-title" scope="col" style="width:20%">
             <%= t.booking_item_management.form.name.label %>
          </th>       
+         <th class="table-header-title" scope="col" style="width:10%">
+            <%= t.booking_item_management.form.model.label %>
+         </th>
+         <th class="table-header-title" scope="col" style="width:20%">
+            <%= t.booking_item_management.form.plate.label %>
+         </th>
          <th class="table-header-title" scope="col" style="width:30%">
          </th>         
        </tr>
@@ -37,13 +57,19 @@
 <script type="text/tmpl" id="elements_list_template">
     <tr class="table-row" id="element_row_<%%=index%>">
       <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+         <%%= entity.category_code %>
+      </td>
+      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
          <%%= entity.reference %>
       </td>
-      <td class="table-cell element-navigation-detail centered_text" rel="<%%= index %>">
-         <%%= entity.category_code %>
-      </td> 
       <td class="table-cell element-navigation-detail" rel="<%%= index %>">
          <%%= entity.name %>
+      </td>
+      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+         <%%= entity.stock_model %>
+      </td>
+      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+         <%%= entity.stock_name %>
       </td>
       <td class="table-cell">
       </td>
