--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -34,7 +34,7 @@
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>
         <li><a href='/admin/booking/bookings'><%=t.booking_console.reservations%></a></li>
-        <li><a href="/admin/booking/planning2?from=<%=Date.today.strftime('%Y-%m-%d')%>&to=<%=(Date.today + 180).strftime('%Y-%m-%d')%>"><%=t.booking_console.planning%> NUEVO</a></li> 
+        <li><a href="/admin/booking/planning2?from=<%=Date.today.strftime('%Y-%m-%d')%>&to=<%=(Date.today + 180).strftime('%Y-%m-%d')%>"><%=t.booking_console.planning%></a></li> 
         <li><a href='/admin/booking/monthly-occupation'><%=t.booking_console.monthly_occupation%></a></li>        
         <li><a href='/admin/booking/resources-occupation'><%=t.booking_console.check_availability%></a></li>  
         <li style="border-top: 1px dotted; border-color: #EEE"><a href='/admin/booking/reports/pending-confirmation'><%=t.booking_console.report_pending_confirmation%><%if pending_confirmation>0%><span style="background: red; padding: 2px 7px; border-radius: 50%; position: relative; top: -13px; left: -4px; color: white; text-decoration: none; font-size: 0.7em"><%=pending_confirmation%></span><%end%></a></li>
