--- a/views/_booking_planning.js.erb
+++ b/views/_booking_planning.js.erb
@@ -733,7 +733,7 @@ require(['YSDFormatter', 'jquery', 'jquery.ui', 'jquery.ui.datepicker-es', 'jque
           var firstMonthDayColumnClass = firstMonthDay ? 'first-month-day' : '';
 
           // Create the header row (with dates)
-          var headerClass = 'date_hader';
+          var headerClass = 'date_header';
           if (oddMonth) {
               headerClass += ' ';
               headerClass += oddMonthHeaderClass;
